--- a/index.html
+++ b/index.html
@@ -442,10 +442,90 @@
             <use href="./images/icons.svg#icon-icon-close"></use>
           </svg>
         </button>
+        <p class="paragraph-modal">
+          Leave your contacts and we will call you back
+        </p>
+        <form>
+          <div class="modal-icon-container">
+            <label class="modal-label" for="user-name">Name</label>
+            <div class="modal-svg-input">
+              <input
+                class="modal-input"
+                id="user-name"
+                type="text"
+                name="user-name"
+                required
+              />
+              <svg class="modal-icon-input" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-icon-container">
+            <label class="modal-label" for="Phone">Phone</label>
+            <div class="modal-svg-input">
+              <input
+                type="text"
+                class="modal-input"
+                id="Phone"
+                name="Phone"
+                required
+              />
+              <svg class="modal-icon-input" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-icon-container">
+            <label class="modal-label" for="modal-email">Email</label>
+            <div class="modal-svg-input">
+              <input
+                type="text"
+                class="modal-input"
+                id="modal-email"
+                name="email"
+                required
+              />
+              <svg class="modal-icon-input" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-comment-input">
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-textarea"
+              name="user-comment"
+              placeholder="Text input"
+              id="user-comment"
+            ></textarea>
+          </div>
+          <div class="privacy-container">
+            <input
+              class="visually-hidden input-modal-privacy"
+              value="true"
+              type="checkbox"
+              id="user-privacy"
+              name="user-privacy"
+              required
+            />
+            <label class="label-modal" for="user-privacy"
+              ><span class="modal-span">
+                <svg class="modal-icon-privacy" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Property-1click"></use>
+                </svg> </span
+              >I accept the terms and conditions of the
+              <a class="modal-privacy-link" href="#">Privacy Policy</a></label
+            >
+          </div>
+          <button class="modal-button-send" type="submit">Send</button>
+        </form>
       </div>
     </div>
-
 
     <script src="./js/modal.js"></script>
   </body>
 </html>
+
+
+
