--- a/portfolio.html
+++ b/portfolio.html
@@ -327,6 +327,25 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-container">
+          <p class="subscribe-title">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-label" for="email"
+              ><input
+                type="email"
+                class="footer-input-email"
+                id="email"
+                name="email"
+                placeholder="E-mail"
+                required
+            /></label>
+            <button class="button-subscribe" type="submit">
+              Subscribe<svg width="24" height="24" class="subscription-icon">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
