--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
               name="user-privacy"
               required
             />
-            <label class="label-modal" for="user-privacy"
+            <label class="modal-label" for="user-privacy"
               ><span class="modal-span">
                 <svg class="modal-icon-privacy" width="10" height="8">
                   <use href="./images/icons.svg#icon-Property-1click"></use>
