--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             <label class="modal-label" for="user-privacy"
               ><span class="modal-span">
                 <svg class="modal-icon-privacy" width="10" height="8">
-                  <use href="./images/icons.svg#icon-Property-1click"></use>
+                  <use href="./images/icons.svg#icon-Vector"></use>
                 </svg> </span
               >I accept the terms and conditions of the
               <a class="modal-privacy-link" href="#">Privacy Policy</a></label
