--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                 required
               />
               <svg class="modal-icon-input" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone"></use>
+                <use href="./images/icons.svg#icon-phone-black-18dp-1-1"></use>
               </svg>
             </div>
           </div>
